--- a/swipelinc-react/src/components/Steps/styles.css
+++ b/swipelinc-react/src/components/Steps/styles.css
@@ -1,3 +1,14 @@
 h2 {
   width: 150px;
 }
+.add-icon {
+  font-size: 28px;
+  margin-left: 20px;
+  color: white;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  background-color: green;
+  border: 1px solid green;
+  border-radius: 50%;
+}
