--- a/swipelinc-react/src/components/common/card.css
+++ b/swipelinc-react/src/components/common/card.css
@@ -10,7 +10,7 @@ th {
 th,
 td {
   text-align: left;
-  padding: 8px;
+  padding: 8px 16px;
   border: 1px solid black;
 }
 
@@ -19,13 +19,17 @@ tr:nth-child(even) {
 }
 
 .add-icon {
-  font-size: 31px;
+  font-size: 28px;
   margin-left: 20px;
+  color: white;
   cursor: pointer;
   width: 30px;
   height: 30px;
-  padding: 3px;
   background-color: green;
   border: 1px solid green;
   border-radius: 50%;
+}
+
+hr {
+  border-width: 10px !important;
 }
