--- a/swipelinc-react/src/components/Steps/styles.css
+++ b/swipelinc-react/src/components/Steps/styles.css
@@ -12,3 +12,11 @@ h2 {
   border: 1px solid green;
   border-radius: 50%;
 }
+
+#file-upload {
+  font-size: 15px;
+  border: none;
+  background: lightgray;
+  padding: 0.75em 1.25em;
+  border-radius: 0.5em;
+}
